--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,11 @@
 }
 
 body {
-    font-family: Impact, 'Haettenschweiler', 'Arial Narrow Bold', sans-serif;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Oswald', sans-serif;
 }
 
 a {
