--- a/styles/style.css
+++ b/styles/style.css
@@ -1,108 +1,546 @@
 :root {
-    --primary-color: #486f3f;
-    --secondary-color: #be7526;
-    --secondary-color-40: #d5c0a5;
+  --primary-color: #486f3f;
+  --secondary-color: #be7526;
+  --secondary-color-40: #d5c0a5;
+  --secondary-color-20: #ebdfd3;
+  --accent-color-1: #9cbd2c;
+  --accent-color-2: #dfb967;
 }
 
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Titillium Web', sans-serif;
+  font-family: "Titillium Web", sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Oswald', sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Oswald", sans-serif;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
+}
+
+.primary-button,
+.secondary-button {
+  display: block;
+  background-color: var(--primary-color);
+  font-family: "Oswald", sans-serif;
+  color: #fff;
+  text-align: center;
+  width: 250px;
+  height: 40px;
+  border-radius: 33px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.primary-button {
+  transition: background-color 0.5s ease-in-out;
+}
+
+.primary-button:hover {
+  background-color: var(--accent-color-1);
+}
+
+.secondary-button {
+  background-color: transparent;
+  color: var(--primary-color);
+  border: 2px solid var(--primary-color);
+  transition: border-width 0.5s ease-in-out;
+}
+
+.secondary-button:hover {
+  border-width: 3px;
+}
+
+.cta {
+  display: block;
+  background-color: var(--accent-color-1);
+  font-family: "Oswald", sans-serif;
+  color: #fff;
+  text-align: center;
+  width: 106px;
+  padding: 3px;
+  transition: background-color 0.5s ease-in-out;
+}
+
+.cta:hover {
+  background-color: var(--accent-color-2);
+}
+
+.white-section {
+  margin: 16px;
+  padding: 41px 0;
+}
+
+.brown-section {
+  padding-top: 41px;
+  background-color: var(--secondary-color-20);
+}
+
+.brown-section .content-wrapper {
+  margin: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.brown-section .section-title {
+ color: var(--secondary-color);
+}
+
+.brown-section .primary-button {
+  background-color: var(--secondary-color);
+  margin: 1rem auto;
+}
+
+.brown-section .img-wrapper {
+  width: 100%;
+  padding-top: 100%;
+  background-image: url("../images/frutas_verduras.jpg");
+  background-position: center;
+  background-size: cover;
+}
+
+.section-title {
+  font-size: 32px;
+  color: var(--primary-color);
+  text-align: center;
+}
+
+.section-text {
+  text-align: center;
+  max-width: 580px;
+  margin: 0 auto;
+}
+
+.white-section > .secondary-button {
+  margin: 39px auto 0px auto;
+}
+
+/* HEADER */
+
+header {
+  position: relative;
 }
 
 .header-menu-1 {
-    height: 72px;
-    background-color: var(--primary-color);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 50px;
+  min-height: 96px;
+  background-color: var(--primary-color);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.header-menu-1 .links {
-    display: flex;
-    gap: 2rem;
+.header-menu-1 > * {
+  min-height: 48px;
+}
+
+.header-menu-1 .direct-access {
+  display: flex;
+  flex-basis: 100%;
+}
+
+.direct-access div {
+  flex-basis: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.direct-access div:first-child {
+  background-color: var(--secondary-color-40);
+}
+.direct-access div:last-child {
+  background-color: var(--secondary-color-20);
+}
+
+.direct-access a {
+  color: #000;
+}
+
+.logo-container {
+  display: flex;
+  padding-left: 20px;
+}
+
+.hamburger {
+  padding-right: 20px;
+}
+.hamburger a {
+  color: #fff;
+  font-size: 2rem;
 }
 
 .header-menu-2 {
-    height: 72px;
-    background-color: var(--secondary-color-40);
-    display: flex;
-    
+  display: none;
+  background-color: var(--primary-color);
+  font-weight: bold;
+  z-index: 100;
+  position: absolute;
+  top: 96px;
+  width: 100%;
+}
+
+.shown {
+  display: block;
 }
 
 .header-menu-2 ul {
-    width: 100%;
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  list-style: none;
 }
 
+.header-menu-2 ul li {
+  display: flex;
+  justify-content: center;
+  padding: 15px;
+  border-top: 1px solid white;
+}
+
+.header-menu-2 ul li a {
+  color: #fff;
+}
+
+.logo {
+  width: 160px;
+}
+
+.redes {
+  position: absolute;
+  top: 110px;
+  left: 20px;
+  z-index: 1;
+  display: flex;
+  gap: 0.5em;
+}
+
+.redes a i {
+  color: #fff;
+  mix-blend-mode: difference;
+}
 
 /* CAROUSEL */
 
 .carousel {
-    width: 100%;
-    height: 75vh;
-    overflow: hidden;
-    position: relative;
+  width: 100%;
+  height: calc(100vh - 96px);
+  overflow: hidden;
+  position: relative;
 }
 
 .carousel-inner {
-    display: flex;
-    transition: transform 0.5s ease-in-out;
-    width: 100%;
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+  width: 100%;
 }
 
-.carousel-img-wrapper {
-    flex: 0 0 auto;
-    width: 100vw;
-    height: 100vh;
+.carousel-wrapper {
+  position: relative;
+  flex: 0 0 auto;
+  width: 100vw;
+  height: 100vh;
+}
+
+.carousel-slide-information {
+  position: absolute;
+  z-index: 6;
+  width: 85vw;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 10%);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+}
+
+.carousel-slide-information h3,
+.carousel-slide-information p {
+  color: #fff;
+  text-align: center;
+  text-shadow: 0px 4px 6px rgba(0, 0, 0, 0.75);
+}
+
+.carousel-slide-information h3 {
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 36px;
+}
+
+.carousel-slide-information .primary-button {
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.75);
+  margin: 0 auto;
+}
+
+.shadow-cover {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: #d9d9d9;
+  mix-blend-mode: multiply;
+  z-index: 5;
 }
 
 .carousel-item {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .carousel-control {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 10;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 10;
+  color: #fff;
 }
 
 .prev {
-    left: 1rem;
+  left: 1rem;
 }
 
 .next {
-    right: 1rem;
+  right: 1rem;
 }
 
 .carousel-control-icon {
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    background-color: #000;
-    opacity: 0.5;
+  display: inline-block;
 }
 
 .carousel-control:hover .carousel-control-icon {
-    opacity: 1;
+  opacity: 1;
+}
+
+/* CARD SLIDER */
+
+.card-slider {
+  margin-top: 39px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.card-slider > div:nth-child(2),
+.card-slider > div:nth-child(3) {
+  display: none;
+}
+
+.card-slider > a {
+  display: block;
+  position: absolute;
+  top: 50%;
+}
+
+.card-slider > a:last-child {
+  right: 0px;
+}
+
+.card {
+  width: 212px;
+  margin: 0 auto;
+}
+
+.card img {
+  width: 100%;
+}
+
+.card-info {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.card h4 {
+  font-size: 24px;
+  line-height: 27px;
+  color: var(--primary-color);
+}
+
+/* Estilos para tablet */
+@media (min-width: 768px) {
+  .white-section {
+    margin: 95px auto;
+    max-width: 980px;
+  }
+
+  .brown-section {
+    position: relative;
+    padding: unset;
+    background-color: var(--secondary-color-20);
+    min-height: 500px;
+  }
+
+  .brown-section::before {
+    content: "";
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    left: 50%;
+    background-image: url("../images/frutas_verduras.jpg");
+    background-position: center;
+    background-size: cover;
+  }
+
+  .brown-section .img-wrapper {
+    display: none;
+  }
+
+  .brown-section .brown-inner-section{
+    max-width: 980px;
+    margin: 0 auto;
+    min-height: 500px;
+    display: flex;
+  }
+
+  .brown-section .content-wrapper {
+    flex-basis: 50%;
+    align-items: flex-start;
+    margin: unset;
+    padding: 1rem;
+  }
+
+  .brown-section .section-text {
+    text-align: left;
+  }
+
+  .brown-section .primary-button {
+    margin: unset;
+    margin-top: 1rem;
+  }
+
+  .white-section > .secondary-button {
+    margin: 75px auto 0px auto;
+  }
+
+  /* HEADER */
+
+  .header-menu-1 {
+    min-height: 72px;
+    align-items: center;
+    padding: 0 50px;
+  }
+
+  .header-menu-1 .direct-access {
+    flex-basis: unset;
+    order: 2;
+    gap: 1rem;
+  }
+
+  .direct-access div {
+    background-color: transparent !important;
+    flex-basis: unset;
+  }
+
+  .logo-container {
+    padding-left: unset;
+  }
+
+  .direct-access a {
+    color: #fff;
+  }
+
+  .header-menu-1 .hamburger {
+    display: none;
+  }
+
+  .header-menu-2 {
+    height: 55px;
+    background-color: var(--secondary-color-40);
+    display: flex;
+    padding: 0 35px;
+    position: relative;
+    top: 0;
+    left: 0;
+  }
+
+  .header-menu-2 ul {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .header-menu-2 ul li {
+    border: 0px;
+    display: block;
+  }
+
+  .header-menu-2 ul li a {
+    color: #000;
+  }
+
+  .logo {
+    width: 230px;
+  }
+
+  .redes {
+    top: 140px;
+    left: 50px;
+    z-index: 100;
+    gap: 0.5em;
+  }
+
+  /* CAROUSEL */
+
+  .carousel {
+    height: calc(100vh - 127px);
+  }
+
+  .carousel-slide-information h3,
+  .carousel-slide-information p {
+    text-align: left;
+  }
+
+  .carousel-slide-information {
+    width: 25vw;
+    min-width: 200px;
+    top: 50%;
+    left: 75%;
+    align-items: flex-start;
+  }
+
+  .carousel-slide-information .primary-button {
+    margin: unset;
+  }
+
+  /* CARD SLIDER */
+  .card-slider {
+    margin-top: 75px;
+    flex-direction: row;
+  }
+  .card-slider > div:nth-child(2),
+  .card-slider > div:nth-child(3) {
+    display: block;
+  }
+
+  .card {
+    width: 285px;
+  }
+}
+
+/* Estilos para computadoras de escritorio */
+@media (min-width: 1024px) {
+  /**/
+}
+
+/* Estilos para pantallas grandes */
+@media (min-width: 1200px) {
+  /**/
 }
