--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style: none;
 }
 
 body {
@@ -202,10 +203,6 @@ header {
 
 .shown {
   display: block;
-}
-
-.header-menu-2 ul {
-  list-style: none;
 }
 
 .header-menu-2 ul li {
@@ -421,6 +418,37 @@ footer {
   background-color: var(--primary-color);
   padding: 1rem;
   color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 6rem;
+}
+
+footer > * {
+  margin: auto;
+}
+
+footer .info {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+footer address {
+  font-style: normal;
+}
+
+.footer_redes {
+  text-align: center;
+}
+
+footer h6 {
+  font-family: "Titillium web", sans-serif;
+  font-size: 1rem;
+}
+
+footer a {
+  color: #fff;
 }
 
 /* Estilos para tablet */
@@ -608,6 +636,14 @@ footer {
     line-height: 28px;
     display: block;
     flex-basis: 50%;
+  }
+
+  /* FOOTER */
+  footer .info {
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+    max-width: 980px;
   }
 }
 
