--- a/styles/style.css
+++ b/styles/style.css
@@ -124,6 +124,15 @@ a {
   margin-bottom: 1rem;
 }
 
+.page-title {
+  font-size: 48px;
+  line-height: 58px;
+  color: var(--primary-color);
+  text-align: center;
+  margin-bottom: 1.5rem;
+  margin-top: 1rem;
+}
+
 .section-text {
   text-align: center;
   max-width: 580px;
@@ -244,6 +253,10 @@ header {
 .redes a i {
   color: #fff;
   mix-blend-mode: difference;
+}
+
+.darker a i {
+  color: var(--primary-color);
 }
 
 /* CAROUSEL AND HERO */
@@ -537,6 +550,13 @@ footer a {
 
   .white-section>.secondary-button {
     margin: 75px auto 0px auto;
+  }
+
+  .page-title {
+    font-size: 80px;
+    line-height: 86px;
+    margin-bottom: 1.5rem;
+    margin-top: 1rem;
   }
 
   .section-text {
