Put color green on social networks and add submenu to navbar

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 :root {
   --primary-color: #486f3f;
+  --primary-color-40: #6D8B67;
   --secondary-color: #be7526;
   --secondary-color-40: #d5c0a5;
   --secondary-color-20: #ebdfd3;
@@ -271,6 +272,28 @@ header {
   color: #fff;
 }
 
+.header-menu-2 li.dropdown {
+  position: relative;
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.header-menu-2 li.dropdown span {
+  display: block;
+  position: absolute;
+}
+
+.header-menu-2 .submenu {
+  background-color: var(--primary-color-40);
+  /* position: absolute; */
+  position: relative;
+  bottom: -15px; 
+  margin-top: 26px; 
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
 .logo {
   margin-top: 0.2rem;
   width: 160px;
@@ -288,6 +311,10 @@ header {
 .redes a i {
   color: #fff;
   mix-blend-mode: difference;
+}
+
+.redes a i.green {
+  color: var(--primary-color);
 }
 
 .darker a i {
@@ -846,6 +873,28 @@ footer a {
     font-size: 0.7rem;
     padding-top: unset;
     padding-left: unset;
+  }
+
+  .header-menu-2 li.dropdown {
+    position: relative;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  
+  .header-menu-2 li.dropdown span {
+    display: block;
+    position: relative;
+  }
+  
+  .header-menu-2 .submenu {
+    display: none;
+    background-color: var(--secondary-color-20);
+    position: absolute;
+    bottom: unset;
+    top: 54px;
+    margin-top: 0px;
+    width: 200px;
+    z-index: 20000;
   }
 
   .logo {
