--- a/styles/style.css
+++ b/styles/style.css
@@ -391,7 +391,7 @@ header {
   width: 100%;
   height: 100%;
   position: absolute;
-  background: #d9d9d9;
+  background: #a0a0a0;
   mix-blend-mode: multiply;
   z-index: 5;
 }
